[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/Game.gd" id="1_rc3e6"]

[node name="Main" type="Node2D"]
script = ExtResource("1_rc3e6")

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -5.0
autoplay = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 0.0
offset_right = 0.0
offset_bottom = 60.0

[node name="TopBar" type="Panel" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = 52.0

[node name="LblLeft" type="Label" parent="CanvasLayer/HUD/TopBar"]
layout_mode = 0
offset_left = 12.0
offset_top = 10.0
text = "Wave 1  Inimigos 0  FPS 0"

[node name="LblCenter" type="Label" parent="CanvasLayer/HUD/TopBar"]
layout_mode = 0
offset_left = 280.0
offset_top = 10.0
text = "Moedas 0"

[node name="LblRight" type="Label" parent="CanvasLayer/HUD/TopBar"]
layout_mode = 0
offset_left = 500.0
offset_top = 10.0
text = "Vida 100"
horizontal_alignment = 2

[node name="BtnKillAll" type="Button" parent="CanvasLayer/HUD/TopBar"]
layout_mode = 0
offset_left = 700.0
offset_top = 8.0
offset_right = 790.0
offset_bottom = 36.0
text = "Kill All"

[node name="BtnBuyTower" type="Button" parent="CanvasLayer/HUD/TopBar"]
layout_mode = 0
offset_left = 810.0
offset_top = 8.0
offset_right = 940.0
offset_bottom = 36.0
text = "Comprar Torre"

[node name="BtnBuyBlock" type="Button" parent="CanvasLayer/HUD/TopBar"]
layout_mode = 0
offset_left = 950.0
offset_top = 8.0
offset_right = 1080.0
offset_bottom = 36.0
text = "Comprar Bloco"

[node name="UpgradeOverlay" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="CanvasLayer/UpgradeOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -140.0
offset_right = 220.0
offset_bottom = 140.0

[node name="Title" type="Label" parent="CanvasLayer/UpgradeOverlay/Panel"]
layout_mode = 0
offset_left = 20.0
offset_top = 16.0
text = "Escolha UM benefício"

[node name="Btn1" type="Button" parent="CanvasLayer/UpgradeOverlay/Panel"]
layout_mode = 0
offset_left = 20.0
offset_top = 52.0
offset_right = 400.0
offset_bottom = 88.0
text = "+1 Dano"

[node name="Btn2" type="Button" parent="CanvasLayer/UpgradeOverlay/Panel"]
layout_mode = 0
offset_left = 20.0
offset_top = 96.0
offset_right = 400.0
offset_bottom = 132.0
text = "+Cadência"

[node name="Btn3" type="Button" parent="CanvasLayer/UpgradeOverlay/Panel"]
layout_mode = 0
offset_left = 20.0
offset_top = 140.0
offset_right = 400.0
offset_bottom = 176.0
text = "+1 Perfuração"

[node name="BtnResume" type="Button" parent="CanvasLayer/UpgradeOverlay/Panel"]
layout_mode = 0
offset_left = 140.0
offset_top = 190.0
offset_right = 260.0
offset_bottom = 220.0
text = "Resume"

[node name="GameOverOverlay" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="CanvasLayer/GameOverOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -120.0
offset_right = 220.0
offset_bottom = 120.0

[node name="Title" type="Label" parent="CanvasLayer/GameOverOverlay/Panel"]
layout_mode = 0
offset_left = 20.0
offset_top = 16.0
offset_right = 400.0
offset_bottom = 48.0
text = "Game Over"
horizontal_alignment = 1

[node name="LblWave" type="Label" parent="CanvasLayer/GameOverOverlay/Panel"]
layout_mode = 0
offset_left = 20.0
offset_top = 48.0
offset_right = 400.0
offset_bottom = 72.0
text = "Wave 0"
horizontal_alignment = 1

[node name="BtnRestart" type="Button" parent="CanvasLayer/GameOverOverlay/Panel"]
layout_mode = 0
offset_left = 20.0
offset_top = 80.0
offset_right = 200.0
offset_bottom = 108.0
text = "Reiniciar"

[node name="BtnMenu" type="Button" parent="CanvasLayer/GameOverOverlay/Panel"]
layout_mode = 0
offset_left = 220.0
offset_top = 80.0
offset_right = 400.0
offset_bottom = 108.0
text = "Menu"

